@@ -1,4 +1,5 @@
 Changes
+inc/Devel/CheckLib.pm
 Makefile.PL
 MANIFEST
 MANIFEST.SKIP
