@@ -1,8 +1,18 @@
+use lib qw(inc);
 use ExtUtils::MakeMaker;
+use Devel::CheckLib;
+use strict;
 
 # Check whether we have <attr/attributes.h> and <attr/xattr.h> on Linux.
 # Suggest what the user needs to install, to get these files.
-@DIRS = qw(. /usr/include);
+
+if ($^O eq 'linux') {
+    check_lib_or_exit(
+        lib => [qw(attr)]
+    );
+}
+
+my @DIRS = qw(. /usr/include);
 if ($^O eq 'linux')
 {
     my %headers = (
@@ -10,6 +20,7 @@ if ($^O eq 'linux')
         'attr/xattr.h' => 0,
     );
     my $incdir;
+    my $missing = 0;
 
     foreach $incdir (@DIRS)
     {
@@ -21,13 +32,20 @@ if ($^O eq 'linux')
 
     foreach (keys %headers)
     {
-        die "<$_> not found; perhaps you need to install libattr-devel"
-            if ($headers{$_} == 0);
+        if ($headers{$_} == 0) {
+            warn "<$_> not found; perhaps you need to install libattr-devel";
+            $missing++;
+        }
     }
+
+    exit(0) if ($missing > 0);
 }
 
 # OpenBSD does not support extended attributes.
-die 'OpenBSD does not support extended attributes' if ($^O eq 'openbsd');
+if ($^O eq 'openbsd') {
+    warn 'OpenBSD does not support extended attributes';
+    die "OS unsupported";
+}
 
 # See lib/ExtUtils/MakeMaker.pm for details of how to influence
 # the contents of the Makefile that is written.
@@ -36,8 +54,8 @@ WriteMakefile(
     VERSION_FROM      => 'lib/File/ExtAttr.pm', # finds $VERSION
     PREREQ_PM         => {
 	# e.g., Module::Name => 1.1
-	Carp => 0,
-	Scalar::Util => 0
+	'Carp' => 0,
+	'Scalar::Util' => 0
     },
     ($] >= 5.005 ?     ## Add these new keywords supported since 5.005
       (ABSTRACT_FROM  => 'lib/File/ExtAttr.pm', # retrieve abstract from module
@@ -55,11 +73,3 @@ WriteMakefile(
     # Hand-roll META.yml and MANIFEST.
     NO_META           => 1,
 );
-
-
- sub MY::postamble {
-'
-$(MYEXTLIB): mylib/Makefile
-		cd mylib && $(MAKE) $(PASSTHRU)
-';
-}
